src/test/ui/error-codes/E0649.stderr
error[E0649]: cannot cast `enum` implementing `Drop` `E` to integer `u32`
  --> $DIR/E0649.rs:13:13
   |
LL |     let i = e as u32;
   |             ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0649`.
