src/test/ui/error-codes/E0649.rs
enum E {
    A = 0,
}

impl Drop for E {
    fn drop(&mut self) {
        println!("Drop");
    }
}

fn main() {
    let e = E::A;
    let i = e as u32; //~ ERROR E0649
}
